Fixed cors. Improved docker-compose. Added new fields in Vacas and Actividades paths.
