# src/controllers/Vacas.js
@@ -57,10 +57,11 @@ module.exports.getVacas = function getVacas (req, res, next) {
   var orderBy = req.swagger.params['orderBy'].value;
   var filter = req.swagger.params['filter'].value;
   var userId = req.swagger.params['userId'].value;
+  var loteId = req.swagger.params['loteId'].value;
   if(!req.user || !req.user.data || (req.user.data.type !== 'ADMIN' && req.user.data.type !== 'EDITOR')){
     userId = req.user.data._id;
   }
-  Vacas.getVacas(skip,limit,orderBy,filter,userId)
+  Vacas.getVacas(skip,limit,orderBy,filter,userId,loteId)
     .then(function (response) {
       if(response)
         utils.writeJson(res, response);
